# ai-simple-engine

./: .gitignore  README.md  pyproject.toml
src/ai_simple_engine/: __init__.py  engine.py  engine_builder.py  resolver_registry.py
src/ai_simple_engine/cache/: base.py  memory_cache.py
src/ai_simple_engine/dependencies/: dependency_finder.py  utils.py
src/ai_simple_engine/device/: base.py  devices.py
src/ai_simple_engine/exceptions/: connection_error.py  execution_error.py  validation_error.py
src/ai_simple_engine/execution/: cache.py  execution_context.py  execution_node.py  execution_plan.py  execution_planner.py  execution_report.py  executor.py  node_result.py  scheduler.py
src/ai_simple_engine/graph/: connection.py  graph.py  graph_builder.py  graph_validator.py  input.py  output.py  port.py  port_reference.py
src/ai_simple_engine/models/: installed_model.py  loaded_model.py  model_family  model_repository.py  model_spec.py
src/ai_simple_engine/plugins/: plugin.py  plugin_component.py  plugin_context.py  plugin_registry.py  transformers_plugin.py
src/ai_simple_engine/resources/: abstract.py  loaded_resource.py  model_resource.py  music_gen_resource.py  resource.py  resource_handle.py  resource_handle_resolver.py  resource_key.py  resources_manager.py
src/ai_simple_engine/runners/: abstract.py
src/ai_simple_engine/serialization/: operation_registry.py  serializer.py
src/ai_simple_engine/services/: keyed_service_registry.py  keyed_service_registrypy  service_registry.py
src/ai_simple_engine/settings/: engine_settings.py
tests/: test_main.py
(+72 files in other folders)
