[project]
name = "ai-simple-engine"
version = "0.0.20"
description = "AI Simple Engine"
authors = [
    {name = "danialcala94", email = "danielalcalavalera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
# Mandatory
# pydantic = { version = ">=2.13.4,<9999.0.0", optional = false }
# Optional

[tool.poetry]
packages = [{include = "ai_simple_engine", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
markers = [
    "mandatory: mandatory tests for release",
    "additional: exhaustive and demanding tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
